Finish modal with game info in list view (search igdb). Add minor style changes.

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -600,7 +600,7 @@ div.no-results {
     box-sizing: border-box;
     max-width: 270px;
     padding: 3px 6px;
-    background: #666666de;
+    background: #777;
     border-radius: 2px;
     color: #fff;
     font-size: 12px;
