--- a/app/views/games/list_show.js.erb
+++ b/app/views/games/list_show.js.erb
@@ -1,3 +1,3 @@
 $("#t-game-show .modal-content").html("<%= j(render partial: 'my_games/list_show', locals: { game: @game }) %>");
-listLight('<%= @game.id %>', 't-game-show');
+listLight('<%= @hg_id %>', 't-game-show');
 presentShadow();
