--- a/app/views/search/_cover_view.html.erb
+++ b/app/views/search/_cover_view.html.erb
@@ -1,53 +1,39 @@
 <div class="uk-grid uk-text-center uk-flex uk-flex-center">
-<% already_offcanvas = [] %>
   <% @results.each do |game| %>
     <% igdb_id = game[:igdb_id] %>
     <% x_id = game[:uniq] ? igdb_id.to_s + '-' + game[:uniq] : igdb_id %>
     <% owned_class = @owned.include?(igdb_id) ? ' owned' : '' %>
 
-    <%= content_tag(:div, id: "gs-#{ x_id}", class: 'game-space') do %>
-    <% if cover = get_game_cover(game) %>
-    <div class="game-cover-effect" style="width: <%= cover[:width] %>px; height: <%= cover[:height] %>px" uk-toggle="target: #i-<%= igdb_id %>">
-      <div class="spinner"><%= svg 'loading' %></div>
-      <%= image_tag('', id: "gc-#{ x_id }", class: "game-cover #{ cover[:from_scrn] }", width: cover[:width], height: cover[:height], 'data-src' => cover[:url], alt: '', 'draggable' => 'false', 'uk-img' => '') %>
+    <%= content_tag(:div, id: "gs-#{ x_id }", class: 'game-space') do %>
+
+      <% if cover = get_game_cover(game) %>
+        <%= link_to(cover_show_url(igdb_id), class: 'game-cover-effect', style: "width: #{ cover[:width] }px; height: #{ cover[:height] }px", remote: true, 'uk-toggle': "target: #i-lone") do %>
+          <%= content_tag :div, svg('loading'), class: 'spinner' %>
+          <%= image_tag('', id: "gc-#{ x_id }", class: "game-cover #{ cover[:from_scrn] }", width: cover[:width], height: cover[:height], 'data-src' => cover[:url], alt: '', 'draggable' => 'false', 'uk-img' => '') %>
+          <%= content_tag :div, game[:addl], class: 'addl-info' if game[:addl] %>
+        <% end %>
       <% else %>
-      <div class="game-cover-effect" uk-toggle="target: #i-<%= igdb_id %>">
-        <%= content_tag(:div, id: "gc-#{ igdb_id }", class: 'no-cover') do %>
-        <%= content_tag(:div, game[:name], class: 'no-cover-game-name unselectable') %>
-        <%= svg 'no_image' %>
+        <%= link_to(cover_show_url(igdb_id), class: 'game-cover-effect', remote: true, 'uk-toggle': "target: #i-lone") do %>
+          <%= content_tag(:div, id: "gc-#{ igdb_id }", class: 'no-cover') do %>
+            <%= content_tag(:div, game[:name], class: 'no-cover-game-name unselectable') %>
+            <%= svg 'no_image' %>
+          <% end %>
+          <%= content_tag :div, game[:addl], class: 'addl-info' if game[:addl] %>
         <% end %>
-        <% end %>
-        <!-- ADDITIONAL INFO -->
-        <% if game[:addl] %>
-        <div class="addl-info" uk-alert>
-          <p><%= game[:addl] %></p>
-        </div>
-        <% end %>
-      </div>
-      <!-- GAME INFO -->
-      <% unless already_offcanvas.include? igdb_id %>
-      <% cover = nil if cover && cover[:from_scrn] %>
-      <%= render partial: "search/game_info", locals: { game: game, cover: cover } %>
-      <% already_offcanvas << igdb_id %>
       <% end %>
-      <!-- NAME AND WARNING -->
       <p class="game-name">
-        <%= content_tag(:span, nil, class: 'name' + owned_class) do %>
-        <%= game[:name] %>
-        <% end %>
+        <%= content_tag(:span, game[:name], class: 'name' + owned_class) %>
         <%= link_to '', new_game_url(x_id: x_id, owned: !owned_class.empty?), class: 'plus', id: "add-#{ x_id }", remote: true, 'uk-icon': 'plus' %>
       </p>
       <div class="fade">
-        <!-- WARNING -->
         <p class="game-warning">
           <% if (status_id = game[:status]) && status_id != 0 %>
-          <button><%= convert_status(status_id) %></button>
+            <button><%= convert_status(status_id) %></button>
           <% end %>
           <% if (category_id = game[:category]) && category_id != 0 %>
-          <button><%= convert_category(category_id) %></button>
+            <button><%= convert_category(category_id) %></button>
           <% end %>
         </p>
-        <!-- RELEASE DATE -->
         <p class="game-release-date">
           <% if game[:first_release_date] %>
           <%= Time.at(game[:first_release_date]).year %>
@@ -55,7 +41,6 @@
           -
           <% end %>
         </p>
-        <!-- PLATFORMS -->
         <% if platforms = game[:platforms_names] %>
         <% if platforms.size > 3 %>
         <% rest = platforms[3..-1] %>
@@ -80,4 +65,11 @@
       <%= content_tag(:div, 'Loading...', id: "add-form-#{ x_id }", class: 'add-form white-form', 'uk-dropdown': "toggle: #add-#{ x_id }; mode: click; boundary: #gs-#{ x_id }; boundary-align: true;  delay-hide: 100;  pos: right-top") %>
       <% end %>
       <% end %>
+</div>
+
+<!-- GAME INFO -->
+<div id="i-lone" uk-offcanvas="mode: none; bg-close: true">
+  <div class="uk-offcanvas-bar">
+    Loading...
+  </div>
 </div>
