--- a/app/assets/stylesheets/panels.scss
+++ b/app/assets/stylesheets/panels.scss
@@ -1,14 +1,18 @@
 .p-addl {
     background: #c5c5c5;
-    padding: 6px 10px;
+    padding: 3px 10px;
     position: absolute;
-    right: 46px;
     bottom: 0px;
     font-size: 12px;
     color: #555;
     font-style: italic;
     border-radius: 3px 3px 0px 0px;
     text-align: right;
+}
+
+.p-addl-spacer {
+    height: 18px;
+    width: 100px;
 }
 
 .g-right-add {
