--- a/app/views/search/_panel_view.html.erb
+++ b/app/views/search/_panel_view.html.erb
@@ -18,10 +18,14 @@
                 <%= content_tag(:span, "(#{ Time.at(game[:first_release_date]).year })", class: 'g-year') if game[:first_release_date] %>
                 </h4>
                 <%= content_tag(:p, 'by ' + game[:developers].join(', '), class: 'g-by') if game[:developers] %>
+
+
+                <%= content_tag :div, nil, class: 'p-addl-spacer' if game[:addl] %>
+                <%= content_tag :div, game[:addl], class: 'p-addl' if game[:addl] %>
+
+
             </div>
 
-
-            <%= content_tag :div, game[:addl], class: 'p-addl' if game[:addl] %>
         <% end %>
         <%= content_tag :div, class: "g-right-add" do %>
            <% add = @owned.include?(igdb_id) ? ['check','Add more'] : ['plus', 'Add'] %>
