Add additional info (character/developer search) to list view in search igbd. Style additional info in list view.

--- a/app/assets/stylesheets/s_list.scss
+++ b/app/assets/stylesheets/s_list.scss
@@ -1,3 +1,24 @@
+tr.l-addl {
+    @include unselectable;
+    box-shadow: none !important;
+    font-size: 12px;
+    color: #555;
+    font-style: italic;
+
+    &:hover td {
+        background: none !important;
+    }
+
+    td {
+        background: none;
+        padding: 0 !important;
+    }
+}
+
+.l-addl-hide {
+    padding: 3px 1px;
+}
+
 #last-form {
     display: none;
 }
