--- a/app/views/search/_panel_view.html.erb
+++ b/app/views/search/_panel_view.html.erb
@@ -19,11 +19,10 @@
                 </h4>
                 <%= content_tag(:p, 'by ' + game[:developers].join(', '), class: 'g-by') if game[:developers] %>
 
-
-                <%= content_tag :div, nil, class: 'p-addl-spacer' if game[:addl] %>
-                <%= content_tag :div, game[:addl], class: 'p-addl' if game[:addl] %>
-
-
+                <% if game[:addl] %>
+                    <%= content_tag :div, nil, class: 'p-addl-spacer' %>
+                    <%= content_tag :div, game[:addl], class: 'p-addl' %>
+                <% end %>
             </div>
 
         <% end %>
