Rework more platforms button (cover view in search igdb).

--- a/app/views/static_pages/_search_bar.html.erb
+++ b/app/views/static_pages/_search_bar.html.erb
@@ -37,7 +37,7 @@
         <label class="options-labels"><%= f.check_box(:erotic, checked: "checked", class: "uk-checkbox") %><span>Erotic games</span></label>
       </div>
       <div class="search-tip">
-        <a class="uk-link-muted" uk-toggle="target: #examples; animation: uk-animation-fade">You can use * for wildcard search.
+        <a class="uk-link-muted" uk-toggle="target: #examples; animation: uk-animation-fade">Use * for wildcard search.
         </a>
       </label>
       <div id="examples" hidden>
