--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -647,6 +647,7 @@ div.no-results {
 
 .mp-label {
     cursor: pointer;
+    position: absolute;
 }
 
 .mp {
@@ -656,18 +657,23 @@ div.no-results {
 }
 
 .mp + svg {
-    fill: #666;
+    fill: $light_grey;
 }
 
 .mp:hover + svg {
-    filter: drop-shadow(0px 2px 3px #ACACAC);
-    transition: .4s;
+    fill: $dark_grey;
 }
 
 .mp:checked + svg {
     -webkit-transform: rotate(180deg);
     -ms-transform: rotate(180deg);
     transform: rotate(180deg);
+    position: relative;
+    top: -1px;
+}
+
+.mp-more {
+    display: none;
 }
 
 // Developers, Characers - - - - - - - - - - - - - - - - - - - - - - - - - - -//
