--- a/app/views/search/_cover_view.html.erb
+++ b/app/views/search/_cover_view.html.erb
@@ -39,25 +39,31 @@
           -
           <% end %>
         </p>
+
         <% if platforms = game[:platforms_names] %>
-        <% if platforms.size > 3 %>
-        <% rest = platforms[3..-1] %>
-        <% 2.times do |i| %>
-        <p class="game-platform"><%= platforms[i]%></p>
-        <% end %>
-        <p class="game-platform"><%= platforms[2]%>
-          <label class="mp-label"><input class="mp" type="checkbox" uk-icon="triangle-down" uk-toggle="target: #mp-<%= igdb_id %>; animation: uk-animation-fade"></label>
-        </p>
-        <div id="mp-<%= igdb_id %>" hidden>
-          <% rest.each do |platform| %>
-          <p class="game-platform"><%= platform %></p>
+          <% if platforms.size > 3 %>
+            <% rest = platforms[3..-1] %>
+            <% 2.times do |i| %>
+              <p class="game-platform"><%= platforms[i]%></p>
+            <% end %>
+
+            <p class="game-platform">
+              <%= platforms[2]%>
+              <label class="mp-label"><input class="mp" gameid="<%= x_id %>" type="checkbox" uk-icon="triangle-down"></label>
+            </p>
+
+            <div id="mp-<%= x_id %>" class="mp-more" >
+              <% rest.each do |platform| %>
+                <p class="game-platform"><%= platform %></p>
+              <% end %>
+            </div>
+
+          <% else %>
+
+            <% platforms.each do |platform| %>
+              <p class="game-platform"><%= platform %></p>
+            <% end %>
           <% end %>
-        </div>
-        <% else %>
-        <% platforms.each do |platform| %>
-        <p class="game-platform"><%= platform %></p>
-        <% end %>
-        <% end %>
         <% end %>
       </div>
       <%= content_tag(:div, 'Loading...', id: "add-form-#{ x_id }", class: 'add-form white-form', 'uk-dropdown': "toggle: #add-#{ x_id }; mode: click; boundary: #gs-#{ x_id }; boundary-align: true;  delay-hide: 100;  pos: right-top") %>
