--- a/app/views/static_pages/_load_more.js.erb
+++ b/app/views/static_pages/_load_more.js.erb
@@ -10,7 +10,7 @@ $("#show-more").attr('id', 'showed_more');
 cleanOffcanvas()
 flip_offc('<%= current_user.id %>');
 fitNameInNoCover();
-
+morePlatforms();
 
 //list_view
 
