Restyle game name when game is already owned (cover view search igdb).

--- a/app/assets/stylesheets/covers.scss
+++ b/app/assets/stylesheets/covers.scss
@@ -75,7 +75,7 @@
     transition: opacity 0.2s;
 
     &.owned {
-        box-shadow: 0px 2px 0px 0px #bebebe;
+        box-shadow: 0px 1px 0px 0px #9a9a9a;
         padding-bottom: 2px;
     }
 }
