--- a/app/views/search/_cover_view.html.erb
+++ b/app/views/search/_cover_view.html.erb
@@ -2,7 +2,7 @@
   <% @results.each do |game| %>
     <% igdb_id = game[:igdb_id] %>
     <% x_id = game[:uniq] ? igdb_id.to_s + '-' + game[:uniq] : igdb_id %>
-    <% owned_class = @owned.include?(igdb_id) ? ' owned' : '' %>
+    <% owned = @owned.include?(igdb_id) %>
     <%= content_tag(:div, id: "gs-#{ x_id }", class: 'game-space') do %>
       <% if cover = get_game_cover(game) %>
         <%= link_to(cover_show_url(igdb_id), class: 'game-cover-effect', style: "width: #{ cover[:width] }px; height: #{ cover[:height] }px", remote: true, 'uk-toggle': "target: #i-lone") do %>
@@ -20,8 +20,10 @@
         <% end %>
       <% end %>
       <p class="game-name">
-        <%= content_tag(:span, game[:name], class: 'name' + owned_class) %>
-        <%= link_to '', new_game_url(x_id: x_id, owned: !owned_class.empty?), class: 'plus', id: "add-#{ x_id }", remote: true, 'uk-icon': 'plus' %>
+        <% xtr = owned ? ' owned' : '' %>
+        <%= content_tag(:span, game[:name], class: 'name' + xtr) %>
+        <% icon = owned ? 'check' : 'plus' %>
+        <%= link_to '', new_game_url(x_id: x_id, owned: owned), class: 'plus', id: "add-#{ x_id }", remote: true, 'uk-icon': icon %>
       </p>
       <div class="fade">
         <p class="game-warning">
