Add form now auto-selects first collection (and activate form) and always auto-selects first platform.

--- a/app/views/games/new.js.erb
+++ b/app/views/games/new.js.erb
@@ -16,5 +16,7 @@ paintItBlack('<%= @x_id %>')
 
 //panels_view
 
+
+// all
 activateForm('add', '<%= @x_id %>');
 updatePlatformIcon('add', '<%= @x_id %>');
