After successful game adding save collection id to cookies.

--- a/app/views/games/create.js.erb
+++ b/app/views/games/create.js.erb
@@ -14,6 +14,8 @@ if (msg) {
 }
 
 if (success) {
+    // Save last used collection to cookies
+    Cookies.set('last_coll', '<%= @collection.id %>')
 
     // Hide form dropdown
     var drop_element = "#add-form-" + x_id;
