Remove user id from cookies.

--- a/app/views/static_pages/_load_more.js.erb
+++ b/app/views/static_pages/_load_more.js.erb
@@ -8,7 +8,7 @@ $("#show-more").attr('id', 'showed_more');
 
 //covers_view
 cleanOffcanvas()
-flip_offc('<%= current_user.id %>');
+flip_offc();
 fitNameInNoCover();
 morePlatforms();
 
