--- a/app/views/games/cover_show.js.erb
+++ b/app/views/games/cover_show.js.erb
@@ -1,3 +1,3 @@
 $("#i-lone .uk-offcanvas-bar").html("<%= j(render partial: 'shared/cover_show', locals: { game: @game }) %>");
 presentShadow();
-flip_offc(<%= @user_id %>);
+flip_offc();
