--- a/app/views/static_pages/_quest.js.erb
+++ b/app/views/static_pages/_quest.js.erb
@@ -16,6 +16,7 @@ if (no_errors) {
   $("#search-results").html("<%= j(render partial:'results', locals: { view: view }) %>");
   $("#search-results").append("<%= j(render partial: 'layouts/s_toolbar', locals: { last_form: @inquiry.last_form.values }) %>");
   changeTheme();
+  changeSearchView();
 }
 
 
@@ -32,3 +33,5 @@ morePlatforms();
 
 //panels_view
 moreInfo();
+
+//ALL VIEWS
