Fix a bug when searching developer/character and there are more than 50 games in one req, changing view does not transmits to load more.

--- a/app/views/static_pages/_results.html.erb
+++ b/app/views/static_pages/_results.html.erb
@@ -4,6 +4,7 @@
   <div id="show-more">
     <%= form_tag("/search_games", method: :get, remote: true) do %>
     <%= hidden_field_tag :cut, true %>
+    <%= hidden_field_tag :view, view %>
     <%= submit_tag "Load more",
     class: "more-button",
     data: { disable_with: "Please wait..." } %>
