--- a/app/views/static_pages/_results.html.erb
+++ b/app/views/static_pages/_results.html.erb
@@ -25,7 +25,7 @@
   <% else %>
     <% if @status == 2 %>
       <div class="no-more">
-        <button class="more-button" uk-scroll>Can't show you more.<br/>Try being more precise.</button>
+        <button class="more-button" uk-scroll>Can't show you more.<br/>Please try a more precise query.</button>
       </div>
     <% end %>
   <% end %>
