--- a/app/assets/stylesheets/panels.scss
+++ b/app/assets/stylesheets/panels.scss
@@ -17,6 +17,7 @@
 
 .g-right-add {
     padding: 10px 12px;
+    width: 20px;
 
     a {
         color: #999;
@@ -545,12 +546,16 @@ hr.md {
     text-align: left;
 }
 
+.g-info.s-mod {
+    padding: 10px 0px 10px 10px;
+}
+
 .hold-title {
     padding: 10px;
 }
 
 .g-title {
-    margin-bottom: 0px;
+    margin: 0px;
 
     .gw-b {
         font-size: 14px;
@@ -618,7 +623,7 @@ hr.md {
 .g-extra {
     margin: 0px 90px 0px 90px;
     padding-top: 8px;
-    border-top: 2px solid #00000026;
+    border-top: 2px solid #b6b6b6;
 }
 
 .full-scrn {
