--- a/app/views/static_pages/_quest.js.erb
+++ b/app/views/static_pages/_quest.js.erb
@@ -1,15 +1,11 @@
 var no_errors = <%= !@inquiry.errors.any? %>;
+var view = '<%= view %>';
 
 $("#search-errors").replaceWith("<%= j(render partial: 'search_errors', locals: { errors: @inquiry.errors }) %>");
 $('#search-igdb-bar').on('input', function() {
     $("#search-errors").replaceWith("<%= j(render partial: 'search_errors', locals: { errors: [] }) %>");
 });
 
-
-
-//do things differently based on view
-
-//covers_view
 cleanOffcanvas();
 
 if (no_errors) {
@@ -17,21 +13,16 @@ if (no_errors) {
   $("#search-results").append("<%= j(render partial: 'layouts/s_toolbar', locals: { last_form: @inquiry.last_form.values }) %>");
   changeTheme();
   changeSearchView();
+
+    switch (view) {
+        case 'list_view':
+            break;
+        case 'cover_view':
+            fitNameInNoCover();
+            morePlatforms();
+            break;
+        case 'panel_view':
+            moreInfo();
+            break;
+    }
 }
-
-
-
-
-//do things differently based on view
-
-//covers_view
-flip_offc();
-fitNameInNoCover();
-morePlatforms();
-
-//list_view
-
-//panels_view
-moreInfo();
-
-//ALL VIEWS
